# shwild.Rust

./: .gitignore  .rustfmt.toml  .vimrc  CHANGES.md  Cargo.toml  EXAMPLES.md  LICENSE  NEWS.md  README.md  TODO.md  rustfmt.toml
.cargo/: config.toml
.cursor/rules/: rust-standards.mdc
.github/workflows/: ci.yml
benches/: cw-regex.rs  macros.rs  range_string-creation_functions.rs  shwild-compiled_matcher.rs  shwild-matches.rs
examples/: character-play.md  list-matching-files-compiled.md  list-matching-files.md
examples/list-matching-files/: main.rs
examples/list-matching-files-compiled/: main.rs
scripts/: check_derives.py  check_doc_76.py  check_test_names.py  fmt
src/: lib.rs
test/scratch/character-play/: main.rs
