
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
	"Zach Struck <zachstruck@gmail.com>",
]
categories = [
	"command-line-interface",
	"parser-implementations",
	"development-tools",
	"text-processing",
]
description = "Shell-compatible wildcard matching library"
documentation = "https://docs.rs/shwild"
edition = "2021"
exclude = [
	"target",
	".github"
]
homepage = "https://github.com/synesissoftware/shwild.Rust"
keywords = [
	"pattern-matching",
	"shell",
	"wildcards",
]
license = "BSD-3-Clause"
name = "shwild"
readme = "README.md"
repository = "https://github.com/synesissoftware/shwild.Rust"
rust-version = "1.74"
version = "0.1.4"


# ##########################################################
# Targets

[lib]
name = "shwild"
path = "src/lib.rs"

[[bench]]
name = "cw-regex"
harness = false
required-features = [
	"test-regex",
]

[[bench]]
name = "range_string-creation_functions"
harness = false

[[bench]]
name = "shwild-compiled_matcher"
harness = false

[[bench]]
name = "shwild-matches"
harness = false

[[example]]
name = "character-play"
path = "test/scratch/character-play/main.rs"
required-features = [
	"test-regex",
]

[[example]]
name = "list-matching-files"
path = "examples/list-matching-files/main.rs"

[[example]]
name = "list-matching-files-compiled"
path = "examples/list-matching-files-compiled/main.rs"


# ##########################################################
# Features

[features]

default = [
	"lookup-ranges",
]

# General features:
#
# - "_NEVER_TO_BE_ENABLED" - this is a placeholder feature and must NEVER be specified;
# - "null-feature" - a feature that has no effect (and, thus, is useful for simplifying driver scripts);

_NEVER_TO_BE_ENABLED = []
null-feature = []


# Crate-specific features:
#

lookup-ranges = [
	"dep:collect-rs",
]

test-regex = [
	"dep:regex",
]


# ##########################################################
# Dependencies

[dependencies]

collect-rs = { version = "0.2", optional = true }
regex = { version = "1.11", optional = true }


[dev-dependencies]

criterion = { version = "0.5" }
test_help-rs = { version = "0.1" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

